[package]
name = "retag"
version = "0.0.1"
edition = "2024"

[dependencies]
chrono = "0.4.41"
difflib = "0.4.0"
eframe = "0.31.1"
getset = "0.1.6"
image = "0.25.6"
itertools = "0.14.0"
leptess = "0.14.0"
opencv = { version = "0.94.4", features = ["clang-runtime"] }
serde = "1.0.219"
serde_json = "1.0.140"
xcap = "0.6.0"

[profile.release]
debug = true
